--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,22 +1,168 @@
-header  nav a, header  nav span{
+:root {
+    --primary-color: #CDA202;
+    --secondary-color: #faf6e6;
+
+}
+
+header nav a,
+header nav span {
     color: #808080;
     text-decoration: none;
     font-size: 14px;
-    font-weight: 500;
+    /* font-weight: 500; */
 }
+
 header {
-    padding: 10px 0;
+    /* padding: 10px 0; */
+    position: sticky;
+    top: 0;
+    z-index: 99;
 }
-header .login-btn button {
+
+header .login-btn {
     border: 1px solid #cda202;
     background: none;
     color: #cda202;
-    padding: 9px 6px;
+    padding: 9px 36px;
 }
+
 /* import Lora font form assets fonts folder */
 @font-face {
     font-family: 'Lora';
     src: url('../../assets/fonts/lora.regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+}
+
+div#navbarNav ul {
+    animation: growDown 400ms ease-in-out forwards;
+    transform-origin: top center;
+}
+
+#navbarNav ul li:hover>a {
+
+    color: var(--primary-color);
+
+
+}
+
+#navbarNav ul li a {
+    font-weight: 600;
+    color: #7f7f7f;
+    font-size: 14px;
+}
+
+#navbarNav ul li:hover {
+    text-decoration: none;
+}
+
+@keyframes growDown {
+    0% {
+        transform: scaleY(0)
+    }
+
+    80% {
+        transform: scaleY(1.1)
+    }
+
+    100% {
+        transform: scaleY(1)
+    }
+}
+
+@keyframes mations {
+    from {
+        transform: translateY(-100%)
+    }
+
+    to {
+        transform: translateY(0)
+    }
+}
+
+@-moz-keyframes mations {
+    from {
+        transform: translateY(-100%)
+    }
+
+    to {
+        transform: translateY(0)
+    }
+}
+
+@-webkit-keyframes mations {
+    from {
+        transform: translateY(-100%)
+    }
+
+    to {
+        transform: translateY(0)
+    }
+}
+
+@-o-keyframes mations {
+    from {
+        transform: translateY(-100%)
+    }
+
+    to {
+        transform: translateY(0)
+    }
+}
+
+header nav .collapse {
+    visibility: visible;
+}
+
+nav header nav #navbarNav ul li .active {
+    color: var(--primary-color);
+}
+
+
+
+nav .service-dropdown {
+    position: absolute;
+}
+
+.service-dropdown {
+    width: 500px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 5px rgb(178 178 178 / 20%);
+    padding: 10px 5px;
+    position: absolute;
+    border-radius: 0 0 10px 10px;
+    display: none;
+}
+
+
+
+@media screen and (min-width:992px) {
+    .service-link:hover .service-dropdown {
+        display: block;
+    }
+}
+
+
+ul.service-inner-card {
+    display: grid;
+    grid-template-columns: 160px auto;
+    gap: 15px;
+    padding-left: 0;
+    padding: 10px 15px;
+}
+
+@media screen and (max-width:1024px) {
+    nav .service-dropdown {
+        position: static;
+        box-shadow: none;
+    }
+
+    ul.service-inner-card {
+        grid-template-columns: auto;
+    }
+
+    .service-dropdown {
+        display: none;
+    }
+
 }
