--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root{
+:root {
   --primary-color: #CDA202;
-  /* --secondary-color: #faf6e6; */
-  /* --font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+  --secondary-color: #faf6e6;
+
 }
 
-body,html{
-      font-family: "Poppins", sans-serif;
+body,
+html {
+  font-family: "Poppins", sans-serif;
 }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
+p {
+  color: #32312e;
+}
+
+section h2,
+section h3,
+section h4, 
+section h5 {
+  color: #000000;
+}
+
+@media screen and (min-width: 1024px) {
+  section h2 {
+    font-size: 36px;
+  }
+}
 
 @font-face {
-    font-family: 'Lora';
-    src: url('./assets/fonts/lora.regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Lora';
+  src: url('./assets/fonts/lora.regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
-.space-top{
+.space-top {
   padding-top: 100px;
 }
-.margin-before{
+
+.margin-before {
   margin-top: 100px;
 }
+
 @media screen and (max-width:992px) {
-    .space-top{
+  .space-top {
     padding-top: 60px;
-  } 
-  .margin-before{
-  margin-top: 60px;
-}
-}
-@media screen and (max-width:768px) {
-    .space-top{
-    padding-top: 60px;
-  } 
-  .margin-before{
-  margin-top: 40px;
-}
+  }
+
+  .margin-before {
+    margin-top: 60px;
+  }
 }
 
-section{
+@media screen and (max-width:768px) {
+  .space-top {
+    padding-top: 60px;
+  }
+
+  .margin-before {
+    margin-top: 40px;
+  }
+}
+
+section {
   position: relative;
+}
+
+header .active {
+  color: var(--primary-color);
 }
