--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -166,3 +166,38 @@ ul.service-inner-card {
     }
 
 }
+
+button.login-btn {
+    cursor: pointer;
+    padding: 12px 30px;
+    margin: 0;
+    position: relative;
+    display: inline-block;
+    /* border: 2px solid #cda301; */
+    border-radius: 8px;
+    overflow: hidden;
+    background: transparent;
+    transition: color 0.8s ease;
+    z-index: 1;
+}
+
+button.login-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: #cda301;
+    transition: left 0.8s ease;
+    z-index: -1;
+}
+
+button.login-btn:hover::after {
+    left: 0;
+
+}
+
+button.login-btn:hover {
+    color: white;
+}
