--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ header .active {
   left: -100%;
   width: 100%;
   height: 100%;
-  background: #cda301;
+  background-image: linear-gradient(90deg, #cda301, #ecbe07, #937813);
   transition: left 0.8s ease;
   z-index: -1;
 }
@@ -117,14 +117,31 @@ header .active {
 }
 
 .first-btn {
-  background-color: var(--primary-color);
   border-radius: 8px;
   color: white;
+  display: inline-block;
+  background-color: var(--primary-color);
+  font-family: 'lora';
+  width: 100%;
+  padding: 16px 12px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 18px;
+  transition: all .4s;
+}
 
+section a.first-btn:hover,
+section button.first-btn:hover {
+  background-color: #937813;
 }
 
 .cutom-tab-style {
   background-color: #faf6e6;
+
+}
+
+.cutom-tab-style:hover {
+  background-color: var(--primary-color);
 
 }
 
