--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -35,6 +35,13 @@ section p {
   padding: 40px 20px;
 }
 
+@media screen and (min-width:1024px) {
+  .Wrist-Watch-parent {
+    padding: 60px 20px;
+  }
+}
+
+
 @media screen and (max-width:992px) {
   .WristWatchAnalysis-section .WristWatchAnalysCard {
     border: none;
@@ -43,7 +50,7 @@ section p {
   }
 
   .Wrist-Watch-parent {
-    padding: 0;
+    padding: 15px;
   }
 
 }
@@ -78,7 +85,22 @@ section p {
 .ab-meet-experts-card img {
   transition: all .5s ease-in-out;
 }
-.active-custom-tab{
+
+.active-custom-tab {
   background-color: #CDA202;
   color: #ffffff;
+}
+
+.astro-img::before {
+  content: "online";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  /* height: 100%; */
+  background: #23232370;
+  /* width: 100%; */
+  z-index: 09999999;
+  color: #ffffff;
+  padding: 6px 10px;
+  border-radius: 0 0 8px 0;
 }
