--- a/src/assets/css/testimonial.css
+++ b/src/assets/css/testimonial.css
@@ -1,5 +1,3 @@
-
-
 :root {
   /* tweak this to match your brand (close to reference image) */
   --tv-yellow: #caa105;
@@ -7,29 +5,30 @@
 
 /* wrapper controls the overall size/alignment */
 .tv-wrap {
-position: relative;
-    padding: 30px 0;
-    padding-right: 10px;
+  position: relative;
+  padding: 30px 0;
+  padding-right: 8px;
 }
 
 /* yellow speech-bubble block behind the card */
 .tv-yellow {
-position: absolute;
-    left: 27px;
-    top: 0px;
-    bottom: 55px;
-    min-width: 334px;
-    background: var(--tv-yellow);
-    border-radius: 8px;
-    z-index: 0;
-        min-height: 243px;
+  position: absolute;
+  left: 27px;
+  top: 0px;
+  bottom: 55px;
+  min-width: 334px;
+  background: var(--tv-yellow);
+  border-radius: 8px;
+  z-index: 0;
+  min-height: 243px;
 }
 
-/* yellow tail (bottom-right of the yellow block) */
+
 .tv-yellow::after {
   content: "";
   position: absolute;
-  right: 36px;             /* tail position (from right edge of yellow) */
+  right: 36px;
+  /* tail position (from right edge of yellow) */
   bottom: -16px;
   width: 0;
   height: 0;
@@ -39,11 +38,12 @@ position: absolute;
   filter: drop-shadow(0 1px 0 rgba(0, 0, 0, 0.08));
 }
 
-/* white card on top */
+
 .tv-card {
   position: relative;
   z-index: 1;
-  margin-left: 56px;      /* overlap amount so yellow shows on the left */
+  margin-left: 56px;
+  /* overlap amount so yellow shows on the left */
   background: #ffffff;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.08);
@@ -67,6 +67,32 @@ position: absolute;
   margin-top: 2px;
 }
 
+@media screen and (max-width:1023px) {
+  .tv-wrap {
+    padding-right: 0;
+  }
+
+  .tv-yellow {
+    display: none;
+  }
+
+  .tv-card {
+    width: 100%;
+    margin: 0 auto;
+    position: static;
+  }
+
+  .client-next {
+    right: -45px;
+    position: absolute;
+  }
+
+  .client-prev {
+    left: -45px;
+    position: absolute;
+  }
+}
+
 .tv-name {
   font-size: 24px;
   font-weight: 600;
@@ -80,50 +106,79 @@ position: absolute;
 }
 
 /* responsive niceties */
-@media (max-width: 425px) {
-  
+/* @media (max-width: 425px) {}
 
-}
 @media (max-width: 768px) {
   .tv-yellow {
-    /* width: 10px;
-     */
-     bottom: 20px;
-         top: 18px;
+    bottom: 20px;
+    top: 18px;
 
   }
+
   .tv-card {
     margin-left: 38px;
     padding: 16px 18px;
   }
-}
-.testimonial-section .slick-slider .slick-prev:before, .testimonial-section .slick-slider .slick-next:before{
+} */
+
+.testimonial-section .slick-slider .slick-prev:before,
+.testimonial-section .slick-slider .slick-next:before {
   color: #cda202;
   font-size: 40px;
   margin-top: -50px;
 }
-.testimonial-section .slick-slider .slick-prev, .testimonial-section .slick-slider .slick-next{
+
+.testimonial-section .slick-slider .slick-prev,
+.testimonial-section .slick-slider .slick-next {
   /* margin-top: -7%; */
 }
-.tv-card2{
-    position: relative;
-    z-index: 1;
-    margin-left: 30px;
-    background: #ffffff;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.08);
-    /* box-shadow: 0 2px 7px rgba(0, 0, 0, 0.06); */
-    padding: 18px 22px;
-    min-height: 110px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+
+.tv-card2 {
+  position: relative;
+  z-index: 1;
+  margin-left: 30px;
+  background: #ffffff;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  /* box-shadow: 0 2px 7px rgba(0, 0, 0, 0.06); */
+  padding: 18px 22px;
+  min-height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 .tv-card-bg {
-    background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
-    margin-left: 30px;
-    padding-top: 30px;
-    padding-right: 10px;
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
+  margin-left: 30px;
+  padding-top: 30px;
+  padding-right: 10px;
+}
+
+.client-prev,
+.client-next {
+  border: 2px solid #cda301;
+  border-radius: 100px;
+  background-color: transparent;
+  transition: all .4s;
+}
+
+.client-prev svg,
+.client-next svg {
+  fill: #cda301;
+  transition: all .4s;
+}
+
+.client-prev:hover,
+.client-next:hover {
+  border: 2px solid #cda301;
+  border-radius: 100px;
+  background-color: #cda301;
+}
+
+.client-prev:hover svg,
+.client-next:hover svg {
+  fill: #ffffff
 }
